# usd_test

./: Step.usda  house.usda  setup.sh  top.geom.usda  usd.py
c++/: CMakeLists.txt  CMakeLists2.txt  build.py  run.cpp  stream.h
